<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Scores</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league" translatable="false">UEFA Champions League</string>
    <string name="bundesliga" translatable="false">Bundesliga</string>
    <string name="premierleague" translatable="false">Premier League</string>
    <string name="primeradivison" translatable="false">Primera Division</string>
    <string name="seriaa" translatable="false">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">This is a widget probably.</string>
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>
    <string name="detail_match_day">Match Day</string>
    <string name="detail_league">League</string>
    <string name="fragment_about_desc">About the application</string>
    <string name="home_crest">Home Crest</string>
    <string name="home_team">Home team name</string>
    <string name="match_score">Match score</string>
    <string name="match_time">Time of match</string>
    <string name="away_crest">Away Crest</string>
    <string name="away_team">Away team name</string>
    <string name="widget_previous">Previous match</string>
    <string name="widget_refresh">Refresh match data</string>
    <string name="widget_home_team">Home team name</string>
    <string name="widget_score">Score</string>
    <string name="widget_date">Match date</string>
    <string name="widget_time">Match time</string>
    <string name="widget_away_team">Away team name</string>
    <string name="widget_next">Next match</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="about_football_scores">About Football Scores</string>
    <string name="match_details">Match Details</string>
    <string name="list_of_matches">List of matches for the day</string>
    <string name="match_day_group_stage">Group Stages, Matchday : 6</string>
    <string name="match_day_first_knockout">First Knockout round</string>
    <string name="match_day_quarterfinal">QuarterFinal</string>
    <string name="match_day_semifinal">SemiFinal</string>

    <string name="league_seria_a" translatable="false">Seria A</string>
    <string name="league_premier" translatable="false">Premier League</string>
    <string name="league_uefa" translatable="false">UEFA Champions League</string>
    <string name="league_primera" translatable="false">Primera Division</string>
    <string name="league_bundelinga" translatable="false">Bundesliga</string>
    <string name="league_not_known" translatable="false">Not known League Please report</string>

    <string name="match_day_final">Final</string>
    <string name="match_day_matchday">Matchday : </string>

    <string name="team_arsenal" translatable="false">Arsenal London FC</string>
    <string name="team_manchester_united" translatable="false">Manchester United FC</string>
    <string name="team_swansea" translatable="false">Swansea City</string>
    <string name="team_leichester" translatable="false">Leicester City</string>
    <string name="team_everton" translatable="false">Everton FC</string>
    <string name="team_west_ham" translatable="false">West Ham United FC</string>
    <string name="team_tottenham" translatable="false">Tottenham Hotspur FC</string>
    <string name="team_west_bromwich" translatable="false">West Bromwich Albion</string>
    <string name="team_sunderland" translatable="false">Sunderland FC</string>
    <string name="team_stoke_city" translatable="false">Stoke City FC</string>

    <string name="util_minus" translatable="false"> - </string>
</resources>
