<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/widget_top_padding"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="@dimen/widget_button_width"
            android:layout_height="@dimen/widget_button_height"
            android:id="@+id/buttonPrev"
            android:contentDescription="@string/widget_previous"
            android:background="@android:drawable/ic_media_previous"
            android:layout_gravity="top|start" />

        <LinearLayout
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/match"
            android:contentDescription="@string/widget_refresh"
            android:clickable="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/widget_text_team_size"
                android:gravity="center"
                android:text="@string/test_text"
                android:id="@+id/home_name"
                android:contentDescription="@string/widget_home_team"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero_dp"
                android:layout_weight="1"
                android:text="@string/test_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/score_textview"
                android:contentDescription="@string/widget_score"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/test_text"
                    android:textSize="@dimen/widget_text_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/date_textview"
                    android:contentDescription="@string/widget_date"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/test_text"
                    android:textSize="@dimen/widget_text_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/data_textview"
                    android:contentDescription="@string/widget_time"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="@dimen/widget_text_team_size"
                android:id="@+id/away_name"
                android:contentDescription="@string/widget_away_team"/>

        </LinearLayout>

        <Button
            android:layout_width="@dimen/widget_button_width"
            android:layout_height="@dimen/widget_button_height"
            android:id="@+id/buttonNext"
            android:background="@android:drawable/ic_media_next"
            android:contentDescription="@string/widget_next"
            android:layout_gravity="top|end" />

    </LinearLayout>

</RelativeLayout>